Menu do jogo da velha

--- a/index.html
+++ b/index.html
@@ -7,36 +7,22 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Jogo da Velha</h1>
-    <section class="area">
-
-        <article class="item_b_r"></article>
-        <article class="item_b_r"></article>
-        <article class="item_b"></article>
-
-        <article class="item_b_r"></article>
-        <article class="item_b_r"></article>
-        <article class="item_b"></article>
-
-        <article class="item-r"></article>
-        <article class="item-r"></article>
-        <article class="item"></article>
-
-    </section>
-
-    <section class="info">
-        <article class="info-item">
-            <aside class="info-titulo">A vez é:</aside>
-            <aside class="info_corpo_vez">--</aside>
-        </article>
-        <article class="info-item">
-            <aside class="info-titulo">Vencedor</aside>
-            <aside class="info_corpo_resultado">--</aside>
-        </article>
-    </section>
-
-    <button class="reset">Resetar</button>
-
-    <script src="main.js"></script>
+    <section class="container">
+        <h1>Jogo da Velha</h1>
+            <aside>
+                <article>
+                    <p class="modo">Player  VS  Player</p>
+                </article>
+                <article>
+                    <p class="modo">Player  VS  CPU</p>
+                </article>
+                <article>
+                    <p class="modo">CPU  VS  CPU</p>
+                </article>
+                <article>
+                    <p class="modo">Sair</p>
+                </article>
+            </aside>
+    </section>    
 </body>
 </html>
