ajustes na criação do jogo

--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
 </head>
 <body>
     <section class="container">
+        <div id="teste">
+
+        </div>
         <h1>Jogo da Velha</h1>
             <aside>
                 <article>
-                    <p class="modo">Player  VS  Player</p>
+                    <p class="modo">
+                        <a href="./templates/pvp.html">Player  VS  Player</a>
+                    </p>
                 </article>
                 <article>
                     <p class="modo">Player  VS  CPU</p>
@@ -23,6 +28,8 @@
                     <p class="modo">Sair</p>
                 </article>
             </aside>
-    </section>    
+    </section>   
+    
+    <script src="main.js"></script>
 </body>
 </html>
