--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
 </head>
 <body>
     <section class="container">
-        <div id="teste">
-
-        </div>
         <h1>Jogo da Velha</h1>
             <aside>
                 <article>
@@ -19,13 +16,19 @@
                     </p>
                 </article>
                 <article>
-                    <p class="modo">Player  VS  CPU</p>
+                    <p class="modo">
+                        <a href="./templates/playervscpu.html">Player  VS  CPU</a>
+                    </p>
                 </article>
                 <article>
-                    <p class="modo">CPU  VS  CPU</p>
+                    <p class="modo">
+                        <a href="./templates/pvp.html">CPU  VS  CPU</a>
+                    </p>
                 </article>
                 <article>
-                    <p class="modo">Sair</p>
+                    <p class="modo">
+                        <a id="sair" href="">Sair</a>
+                    </p>
                 </article>
             </aside>
     </section>   
