Ajustando a tag âncora

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </article>
                 <article>
                     <p class="modo">
-                        <a href="./templates/pvp.html">CPU  VS  CPU</a>
+                        <a href="./templates/cpuvscpu.html">CPU  VS  CPU</a>
                     </p>
                 </article>
                 <article>
