--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </article>
                 <article>
                     <p class="modo">
-                        <a id="sair" href="">Sair</a>
+                        <a id="sair" href="https://www.google.com.br">Sair</a>
                     </p>
                 </article>
             </aside>
